bindings/java/src/main/java/tw/com/fugle/marketdata/generated/UniffiLib.java

    Long uniffi_marketdata_uniffi_fn_method_stocktechnicalclient_get_kdj(Pointer ptr, RustBuffer.ByValue symbol, RustBuffer.ByValue from, RustBuffer.ByValue to, RustBuffer.ByValue timeframe, RustBuffer.ByValue period);
    Long uniffi_marketdata_uniffi_fn_method_stocktechnicalclient_get_macd(Pointer ptr, RustBuffer.ByValue symbol, RustBuffer.ByValue from, RustBuffer.ByValue to, RustBuffer.ByValue timeframe, RustBuffer.ByValue fast, RustBuffer.ByValue slow, RustBuffer.ByValue signal);
    Long uniffi_marketdata_uniffi_fn_method_stocktechnicalclient_get_rsi(Pointer ptr, RustBuffer.ByValue symbol, RustBuffer.ByValue from, RustBuffer.ByValue to, RustBuffer.ByValue timeframe, RustBuffer.ByValue period);
    Long uniffi_marketdata_uniffi_fn_method_stocktechnicalclient_get_sma(Pointer ptr, RustBuffer.ByValue symbol, RustBuffer.ByValue from, RustBuffer.ByValue to, RustBuffer.ByValue timeframe, RustBuffer.ByValue period);
    RustBuffer.ByValue uniffi_marketdata_uniffi_fn_method_stocktechnicalclient_kdj_sync(Pointer ptr, RustBuffer.ByValue symbol, RustBuffer.ByValue from, RustBuffer.ByValue to, RustBuffer.ByValue timeframe, RustBuffer.ByValue period, UniffiRustCallStatus uniffi_out_errmk);
    RustBuffer.ByValue uniffi_marketdata_uniffi_fn_method_stocktechnicalclient_macd_sync(Pointer ptr, RustBuffer.ByValue symbol, RustBuffer.ByValue from, RustBuffer.ByValue to, RustBuffer.ByValue timeframe, RustBuffer.ByValue fast, RustBuffer.ByValue slow, RustBuffer.ByValue signal, UniffiRustCallStatus uniffi_out_errmk);
    RustBuffer.ByValue uniffi_marketdata_uniffi_fn_method_stocktechnicalclient_rsi_sync(Pointer ptr, RustBuffer.ByValue symbol, RustBuffer.ByValue from, RustBuffer.ByValue to, RustBuffer.ByValue timeframe, RustBuffer.ByValue period, UniffiRustCallStatus uniffi_out_errmk);
    RustBuffer.ByValue uniffi_marketdata_uniffi_fn_method_stocktechnicalclient_sma_sync(Pointer ptr, RustBuffer.ByValue symbol, RustBuffer.ByValue from, RustBuffer.ByValue to, RustBuffer.ByValue timeframe, RustBuffer.ByValue period, UniffiRustCallStatus uniffi_out_errmk);
    Pointer uniffi_marketdata_uniffi_fn_clone_websocketclient(Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);
    void uniffi_marketdata_uniffi_fn_free_websocketclient(Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);
    Pointer uniffi_marketdata_uniffi_fn_constructor_websocketclient_new(RustBuffer.ByValue apiKey, Pointer listener, UniffiRustCallStatus uniffi_out_errmk);
    Pointer uniffi_marketdata_uniffi_fn_constructor_websocketclient_new_with_config(RustBuffer.ByValue apiKey, Pointer listener, RustBuffer.ByValue endpoint, RustBuffer.ByValue reconnectConfig, RustBuffer.ByValue healthCheckConfig, UniffiRustCallStatus uniffi_out_errmk);
    Pointer uniffi_marketdata_uniffi_fn_constructor_websocketclient_new_with_endpoint(RustBuffer.ByValue apiKey, Pointer listener, RustBuffer.ByValue endpoint, UniffiRustCallStatus uniffi_out_errmk);
    Pointer uniffi_marketdata_uniffi_fn_constructor_websocketclient_new_with_full_config(RustBuffer.ByValue apiKey, Pointer listener, RustBuffer.ByValue endpoint, RustBuffer.ByValue baseUrl, RustBuffer.ByValue reconnectConfig, RustBuffer.ByValue healthCheckConfig, RustBuffer.ByValue tls, UniffiRustCallStatus uniffi_out_errmk);
    Pointer uniffi_marketdata_uniffi_fn_constructor_websocketclient_new_with_url(RustBuffer.ByValue apiKey, Pointer listener, RustBuffer.ByValue endpoint, RustBuffer.ByValue baseUrl, RustBuffer.ByValue reconnectConfig, RustBuffer.ByValue healthCheckConfig, UniffiRustCallStatus uniffi_out_errmk);
    Long uniffi_marketdata_uniffi_fn_method_websocketclient_connect(Pointer ptr);
    Long uniffi_marketdata_uniffi_fn_method_websocketclient_disconnect(Pointer ptr);
    Byte uniffi_marketdata_uniffi_fn_method_websocketclient_is_closed(Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);
    Byte uniffi_marketdata_uniffi_fn_method_websocketclient_is_connected(Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);
    Long uniffi_marketdata_uniffi_fn_method_websocketclient_ping(Pointer ptr, RustBuffer.ByValue state);
    Long uniffi_marketdata_uniffi_fn_method_websocketclient_query_subscriptions(Pointer ptr);
    Long uniffi_marketdata_uniffi_fn_method_websocketclient_subscribe(Pointer ptr, RustBuffer.ByValue channel, RustBuffer.ByValue symbol);
    Long uniffi_marketdata_uniffi_fn_method_websocketclient_unsubscribe(Pointer ptr, RustBuffer.ByValue channel, RustBuffer.ByValue symbol);
    Pointer uniffi_marketdata_uniffi_fn_clone_websocketlistener(Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);
    void uniffi_marketdata_uniffi_fn_free_websocketlistener(Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);
    void uniffi_marketdata_uniffi_fn_init_callback_vtable_websocketlistener(UniffiVTableCallbackInterfaceWebSocketListener vtable);
    void uniffi_marketdata_uniffi_fn_method_websocketlistener_on_connected(Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);
    void uniffi_marketdata_uniffi_fn_method_websocketlistener_on_disconnected(Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);
    void uniffi_marketdata_uniffi_fn_method_websocketlistener_on_message(Pointer ptr, RustBuffer.ByValue message, UniffiRustCallStatus uniffi_out_errmk);
    void uniffi_marketdata_uniffi_fn_method_websocketlistener_on_error(Pointer ptr, RustBuffer.ByValue errorMessage, UniffiRustCallStatus uniffi_out_errmk);
    void uniffi_marketdata_uniffi_fn_method_websocketlistener_on_reconnecting(Pointer ptr, Integer attempt, UniffiRustCallStatus uniffi_out_errmk);
    void uniffi_marketdata_uniffi_fn_method_websocketlistener_on_reconnect_failed(Pointer ptr, Integer attempts, UniffiRustCallStatus uniffi_out_errmk);
    Pointer uniffi_marketdata_uniffi_fn_func_new_rest_client_with_api_key(RustBuffer.ByValue apiKey, UniffiRustCallStatus uniffi_out_errmk);
    Pointer uniffi_marketdata_uniffi_fn_func_new_rest_client_with_api_key_and_tls(RustBuffer.ByValue apiKey, RustBuffer.ByValue baseUrl, RustBuffer.ByValue tls, UniffiRustCallStatus uniffi_out_errmk);
    Pointer uniffi_marketdata_uniffi_fn_func_new_rest_client_with_bearer_token(RustBuffer.ByValue bearerToken, UniffiRustCallStatus uniffi_out_errmk);
    Pointer uniffi_marketdata_uniffi_fn_func_new_rest_client_with_bearer_token_and_tls(RustBuffer.ByValue bearerToken, RustBuffer.ByValue baseUrl, RustBuffer.ByValue tls, UniffiRustCallStatus uniffi_out_errmk);
    Pointer uniffi_marketdata_uniffi_fn_func_new_rest_client_with_sdk_token(RustBuffer.ByValue sdkToken, UniffiRustCallStatus uniffi_out_errmk);
    Pointer uniffi_marketdata_uniffi_fn_func_new_rest_client_with_sdk_token_and_tls(RustBuffer.ByValue sdkToken, RustBuffer.ByValue baseUrl, RustBuffer.ByValue tls, UniffiRustCallStatus uniffi_out_errmk);
    Pointer uniffi_marketdata_uniffi_fn_func_new_websocket_client(RustBuffer.ByValue apiKey, Pointer listener, UniffiRustCallStatus uniffi_out_errmk);
    Pointer uniffi_marketdata_uniffi_fn_func_new_websocket_client_with_config(RustBuffer.ByValue apiKey, Pointer listener, RustBuffer.ByValue endpoint, RustBuffer.ByValue reconnectConfig, RustBuffer.ByValue healthCheckConfig, UniffiRustCallStatus uniffi_out_errmk);
    Pointer uniffi_marketdata_uniffi_fn_func_new_websocket_client_with_endpoint(RustBuffer.ByValue apiKey, Pointer listener, RustBuffer.ByValue endpoint, UniffiRustCallStatus uniffi_out_errmk);
    RustBuffer.ByValue ffi_marketdata_uniffi_rustbuffer_alloc(Long size, UniffiRustCallStatus uniffi_out_errmk);
    RustBuffer.ByValue ffi_marketdata_uniffi_rustbuffer_from_bytes(ForeignBytes.ByValue bytes, UniffiRustCallStatus uniffi_out_errmk);
    void ffi_marketdata_uniffi_rustbuffer_free(RustBuffer.ByValue buf, UniffiRustCallStatus uniffi_out_errmk);
    RustBuffer.ByValue ffi_marketdata_uniffi_rustbuffer_reserve(RustBuffer.ByValue buf, Long additional, UniffiRustCallStatus uniffi_out_errmk);
    void ffi_marketdata_uniffi_rust_future_poll_u8(Long handle, UniffiRustFutureContinuationCallback callback, Long callbackData);
    void ffi_marketdata_uniffi_rust_future_cancel_u8(Long handle);
    void ffi_marketdata_uniffi_rust_future_free_u8(Long handle);
    Byte ffi_marketdata_uniffi_rust_future_complete_u8(Long handle, UniffiRustCallStatus uniffi_out_errmk);
    void ffi_marketdata_uniffi_rust_future_poll_i8(Long handle, UniffiRustFutureContinuationCallback callback, Long callbackData);
    void ffi_marketdata_uniffi_rust_future_cancel_i8(Long handle);
    void ffi_marketdata_uniffi_rust_future_free_i8(Long handle);
    Byte ffi_marketdata_uniffi_rust_future_complete_i8(Long handle, UniffiRustCallStatus uniffi_out_errmk);
    void ffi_marketdata_uniffi_rust_future_poll_u16(Long handle, UniffiRustFutureContinuationCallback callback, Long callbackData);
    void ffi_marketdata_uniffi_rust_future_cancel_u16(Long handle);
    void ffi_marketdata_uniffi_rust_future_free_u16(Long handle);
    Short ffi_marketdata_uniffi_rust_future_complete_u16(Long handle, UniffiRustCallStatus uniffi_out_errmk);
    void ffi_marketdata_uniffi_rust_future_poll_i16(Long handle, UniffiRustFutureContinuationCallback callback, Long callbackData);
    void ffi_marketdata_uniffi_rust_future_cancel_i16(Long handle);
    void ffi_marketdata_uniffi_rust_future_free_i16(Long handle);
    Short ffi_marketdata_uniffi_rust_future_complete_i16(Long handle, UniffiRustCallStatus uniffi_out_errmk);
    void ffi_marketdata_uniffi_rust_future_poll_u32(Long handle, UniffiRustFutureContinuationCallback callback, Long callbackData);
    void ffi_marketdata_uniffi_rust_future_cancel_u32(Long handle);
    void ffi_marketdata_uniffi_rust_future_free_u32(Long handle);
    Integer ffi_marketdata_uniffi_rust_future_complete_u32(Long handle, UniffiRustCallStatus uniffi_out_errmk);
    void ffi_marketdata_uniffi_rust_future_poll_i32(Long handle, UniffiRustFutureContinuationCallback callback, Long callbackData);
    void ffi_marketdata_uniffi_rust_future_cancel_i32(Long handle);
    void ffi_marketdata_uniffi_rust_future_free_i32(Long handle);
    Integer ffi_marketdata_uniffi_rust_future_complete_i32(Long handle, UniffiRustCallStatus uniffi_out_errmk);
    void ffi_marketdata_uniffi_rust_future_poll_u64(Long handle, UniffiRustFutureContinuationCallback callback, Long callbackData);
    void ffi_marketdata_uniffi_rust_future_cancel_u64(Long handle);
    void ffi_marketdata_uniffi_rust_future_free_u64(Long handle);
    Long ffi_marketdata_uniffi_rust_future_complete_u64(Long handle, UniffiRustCallStatus uniffi_out_errmk);
    void ffi_marketdata_uniffi_rust_future_poll_i64(Long handle, UniffiRustFutureContinuationCallback callback, Long callbackData);
    void ffi_marketdata_uniffi_rust_future_cancel_i64(Long handle);
    void ffi_marketdata_uniffi_rust_future_free_i64(Long handle);
    Long ffi_marketdata_uniffi_rust_future_complete_i64(Long handle, UniffiRustCallStatus uniffi_out_errmk);
    void ffi_marketdata_uniffi_rust_future_poll_f32(Long handle, UniffiRustFutureContinuationCallback callback, Long callbackData);
    void ffi_marketdata_uniffi_rust_future_cancel_f32(Long handle);
    void ffi_marketdata_uniffi_rust_future_free_f32(Long handle);
    Float ffi_marketdata_uniffi_rust_future_complete_f32(Long handle, UniffiRustCallStatus uniffi_out_errmk);
    void ffi_marketdata_uniffi_rust_future_poll_f64(Long handle, UniffiRustFutureContinuationCallback callback, Long callbackData);
    void ffi_marketdata_uniffi_rust_future_cancel_f64(Long handle);
    void ffi_marketdata_uniffi_rust_future_free_f64(Long handle);
    Double ffi_marketdata_uniffi_rust_future_complete_f64(Long handle, UniffiRustCallStatus uniffi_out_errmk);
    void ffi_marketdata_uniffi_rust_future_poll_pointer(Long handle, UniffiRustFutureContinuationCallback callback, Long callbackData);
    void ffi_marketdata_uniffi_rust_future_cancel_pointer(Long handle);
    void ffi_marketdata_uniffi_rust_future_free_pointer(Long handle);
    Pointer ffi_marketdata_uniffi_rust_future_complete_pointer(Long handle, UniffiRustCallStatus uniffi_out_errmk);
